<resources>
    <string name="app_name">Scenario</string>
    <string name="new_project">Acrescentar novo projeto</string>
    <string name="new_environment">Acrescentar novo ambiente</string>
    <string name="project_name">Nome do Projeto</string>
    <string name="environment_name">Nome do Ambiente</string>
    <string name="edit_text_user">Usuário</string>
    <string name="edit_text_address">Endereço</string>
    <string name="title_new_project">Novo Projeto</string>
    <string name="title_edit_project">Editar Projeto</string>
    <string name="label_type_of_project">Escolha o tipo do projeto:</string>
    <string name="image_project_type">Tipo do Projeto</string>
    <string name="button_start">Iniciar</string>
    <string name="message_project_name_or_user_is_blank">Os campos \'Nome do Projeto\' e \'Usuário\' não podem ficar vazios.</string>
    <string name="message_environment_name_is_blank">O campo \'Nome do Ambiente\' não pode ficar vazio.</string>
    <string name="message_device_name_is_blank">Os campos \'Nome do Dispositivo\' e \'Nome do Fabricante\' não podem ficar vazios.</string>
    <string name="button_confirm">Confirmar</string>
    <string name="button_cancel">Cancelar</string>
    <string name="address_not_registered">Endereço não cadastrado</string>
    <string name="modified_date">Modificado em:</string>
    <string name="user">Usuário:</string>
    <string name="text_about">
        A Scenario é uma indústria genuinamente brasileira que há mais de 25 anos desenvolve soluções para o crescente mercado de automação residencial.
        \n\nSua missão ao longo desses anos tem sido o aperfeiçoamento de seus produtos e serviços, visando atender da melhor forma possível as necessidades do mercado e conquistar cada vez mais a satisfação de seus parceiros e consumidores finais.
        \n\nPelo grande tempo de experiência no ramo, a Scenario apresenta produtos com alto grau de confiabilidade tanto no aspecto técnico quanto na capacidade de suporte e assistência técnica. Ela conta com uma rede de revendas parceiras altamente capacitadas para atender rapidamente seu público final.
        \n\nPensando nas revendas parceiras, a Scenario busca desenvolver ferramentas para facilitar o trabalho de instalação além de oferecer treinamento e auxílio no projeto de automação para que possam caminhar com segurança. Desta forma, as revendas podem levar ao consumidor final todos os benefícios dos produtos e soluções Scenario, garantindo as melhores práticas e a satisfação do público final.
    </string>
    <string name="menu_about_text">Sobre</string>
    <string name="menu_edit_project_title">Editar Projeto</string>
    <string name="menu_delete_project_title">Excluir Projeto</string>
    <string name="menu_edit_environment_title">Editar Ambiente</string>
    <string name="menu_delete_environment_title">Excluir Ambiente</string>
    <string name="cont_desc_image_about">Sobre Scenario Automation</string>
    <string name="button_yes">Sim</string>
    <string name="msg_confirm_delete_project">Você tem certeza que deseja excluir este projeto e todo seu conteúdo?</string>
    <string name="msg_confirm_delete_environment">Você tem certeza que deseja excluir este ambiente e o todo seu conteúdo?</string>
    <string name="msg_confirm_delete_device">Você tem certeza que deseja excluir este dispositivo?</string>
    <string name="content_desc_first_project">Criar projeto</string>
    <string name="text_add_first_project">Clique aqui para adicionar o primeiro projeto</string>
    <string name="content_desc_first_environment">Adicionar ambiente</string>
    <string name="text_add_first_environment">Vamos adicionar um ambiente?</string>
    <string name="content_desc_first_device">Adicionar dispositivo</string>
    <string name="text_add_first_device">Vamos adicionar um dispositivo?</string>
    <string name="text_photo">Foto</string>
    <string name="char_sequence_take_photo">Abrir Câmera</string>
    <string name="char_sequence_open_gallery">Escolher da Galeria</string>
    <string name="char_sequence_cancel">Cancelar</string>
    <string name="alert_dialog_options_photo">O que deseja fazer?</string>
    <string name="toast_no_permission_gallery">Permissão negada! Não é possível acessar a galeria de imagens.</string>
    <string name="toast_no_permission_camera">Permissão negada! Não é possível acessar a câmera.</string>
    <string name="button_delete_device">Excluir Dispositivo</string>
    <string name="environment_photo">Foto do Ambiente</string>
    <string name="title_new_device">Adicionar Dispositivo</string>
    <string name="text_switch_scenario">Dispositivo Scenario</string>
    <string name="hint_manufacturer_name">Nome do Fabricante</string>
    <string name="hint_device_name">Nome do Dispositivo</string>
    <string name="message_saved">Salvo com sucesso!</string>

    <string-array name="options_device">
        <item>Módulo Iluminação</item>
        <item>Teclados</item>
        <item>Módulo Controle Cortina</item>
    </string-array>
</resources>