<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/viewGroupId"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/title_new_project"
            style="@style/style_general_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_new_project"
            android:textAlignment="center"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/project_text_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/title_new_project"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/style_general_margin">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/project_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/project_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/user_text_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/project_text_field"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/style_general_margin">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/user_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/edit_text_user" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/address_text_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/user_text_field"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/style_general_margin">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/address_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="3"
                android:gravity="top"
                android:hint="@string/edit_text_address"
                android:layout_gravity="bottom" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_type_of_project"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textAlignment="textStart"
            android:text="@string/label_type_of_project"
            app:layout_constraintTop_toBottomOf="@+id/address_text_field"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/style_general_margin"/>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:checkedButton="@id/type_house"
            app:layout_constraintTop_toBottomOf="@+id/text_type_of_project"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp">

            <RadioButton
                android:id="@+id/type_house"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/ic_home"/>

            <RadioButton
                android:id="@+id/type_store"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:button="@drawable/ic_store"/>

            <RadioButton
                android:id="@+id/type_building"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:button="@drawable/ic_building"/>
        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_confirm"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/button_confirm"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_cancel"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/button_cancel"
            android:textColor="@color/button_cancel_color"
            app:layout_constraintBaseline_toBaselineOf="@+id/button_confirm"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>