<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_projects"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_new_project"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="16dp"
            android:contentDescription="@string/new_project"
            android:src="@drawable/ic_add" />

        <!-- Apresentar mensagem caso não tenha nenhum projeto criado -->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/viewGroup_no_project"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            tools:visibility="visible">

            <ImageView
                android:id="@+id/icone_no_project"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:src="@drawable/ic_no_project"
                android:layout_gravity="center"
                android:contentDescription="@string/content_desc_first_project"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_no_project"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textAlignment="center"
                android:text="@string/text_add_first_project"
                app:layout_constraintTop_toBottomOf="@+id/icone_no_project"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>